<resources>
    <string name="app_name">FoodswApp</string>
    <string name="email">Email</string>
    <string name="pass">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="acceder">Acceder</string>
    <string name="pregunta_registro">¿Todavía no eres cocinitas?</string>
    <string name="web_client" translatable="false">754566985159-puc8ne1hfvkb1ua33ulnh14i6vupg5k5.apps.googleusercontent.com</string>
    <string name="buttton_google">Entrar con Google</string>
    <string name="prefs_file">com.example.foodswapp.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_busqueda">Descubrir</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_publicar">Subir receta</string>
    <string name="title_lista">Lista</string>
    <string name="title_perfil">Mi Perfil</string>
    <string name="title_subir">Nueva Receta</string>
    <string name="hint_descripcion">Descripción breve de la receta</string>
    <string name="nuevo_ingrediente">Añadir ingrediente</string>
    <string name="hint_ingrediente">Patata, Cebolla, Azúcar…</string>
    <string name="btn_add">Añadir</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="eliminar">Eliminar</string>
    <string name="btnAdd">Añadir</string>
    <string name="btnGuardar">Guardar</string>
    <string name="editar">Editar</string>
    <string name="denunciar">Denunciar</string>
    <string name="compartir">Compartir</string>
    <string name="enviar">Enviar</string>
    <string name="seguir">Seguir</string>
    <string name="nueva_add">Nuevo ingrediente añadido</string>
    <string name="hint_HH">HH</string>
    <string name="hint_MM">MM</string>
    <string name="tiempo_de_elaboracion">Tiempo de elaboración</string>
    <string name="ingredientes">Ingredientes:</string>
    <string name="addIngrediente">Ingrediente y cantidad a añadir</string>
    <string name="siguiente">Siguiente</string>
    <string name="err_titulo_obligatorio">Título obligatorio</string>
    <string name="horas_y">\ horas y \</string>
    <string name="minutos">\ minutos\</string>
    <string name="err_solo_minutos">Sólo minutos</string>
    <string name="err_noIngredientes">Toda receta tiene al menos un ingrediente, ¿Cierto?</string>
    <string name="paso">Paso </string>
    <string name="hint_ejPaso">Comenzaremos preparando un bol y un cucharón para mezclar los ingredientes…</string>
    <string name="err_noPasos">Toda receta tiene al menos un paso, ¿Cierto?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_comentario">Añade un comentario aquí</string>
    <string name="dejar_de_seguir">Dejar de seguir</string>
    <string name="gracias_denunciar">Gracias por informar. La publicación será revisada.</string>
    <string name="pregunta_denuncia">¿Seguro que quieres denunciar esta publicación?</string>
    <string name="eliminar_comentario">¿Eliminar comentario?</string>
    <string name="comentario_eliminado">Comentario eliminado</string>
    <string name="err_tiempo">Tiempo obligatorio</string>
    <string name="pasos">Pasos:</string>
    <string name="vegano">Vegano</string>
    <string name="vegetariano">Vegetariano</string>
    <string name="sin_gluten">Sin Gluten</string>
    <string name="publicacion_eliminada">Publicación eliminada</string>
    <string name="eliminar_publicacion">¿Eliminar publicación permanentemente?</string>
    <string name="titulo">Título</string>
    <string name="dificultad">Dificultad</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="recetas_de_la_semana">Recetas de la semana</string>
    <string name="seguidores">Seguidores</string>
    <string name="seguidos">Seguidos</string>
    <string name="err_ingredientes_repetidos">¡No introduzcas ingredientes repetidos!</string>
    <string name="eliminar_ingrediente">¿Eliminar este ingrediente?</string>
    <string name="ingrediente_eliminado">Ingrediente eliminado</string>
    <string name="ingrediente_added">Ingrediente añadido a tu lista personal.</string>
    <string name="deshacer">Deshacer</string>
    <string name="detalles">Detalles</string>
    <string name="Ingredientes">Ingredientes</string>
    <string name="receta_compartida">Receta compartida</string>
    <string name="mira_la_receta_de">\"Mira la receta de \"</string>
    <string name="mira_la_receta_encontrado">Mira la receta que he encontrado</string>
    <string name="imagen_actualizada">Imagen de perfil actualizada</string>
    <string name="paso_modificado">Paso modificado</string>
    <string name="paso_">\Paso \</string>
    <string name="que_hacer_paso">¿Qué deseas hacer con este paso?</string>
    <string name="paso_eliminado">Paso eliminado</string>
    <string name="modificar">Modificar</string>
    <string name="receta_subida">Receta subida con éxito!</string>
    <string name="nombre_receta">Nombre de la receta</string>
    <string name="nombre_usuario">Nombre del usuario</string>
    <string name="con_los_ingredientes">Con los ingredientes:</string>
    <string name="pasos_">Pasos</string>
    <string name="err_maxingre">Máximo de 10 ingredientes</string>
</resources>