<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.foodswapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_busqueda"
        android:name="com.example.foodswapp.ui.busqueda.BusquedaFragment"
        android:label="@string/title_busqueda"
        tools:layout="@layout/fragment_busqueda" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.foodswapp.ui.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/navigation_lista"
        android:name="com.example.foodswapp.ui.lista.ListaFragment"
        android:label="@string/title_lista"
        tools:layout="@layout/fragment_lista" />

</navigation>